--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -42,6 +42,15 @@
 		<jarsigner.skip>true</jarsigner.skip>
 	</properties>
 
+	<repositories>
+		<!-- Xuggler -->
+		<repository>
+			<id>www.dcm4che.org</id>
+			<name>dcm4che Repository</name>
+			<url>http://www.dcm4che.org/maven2</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -264,6 +273,12 @@
 			<artifactId>mockwebserver</artifactId>
 			<version>3.7.0</version>
 			<scope>test</scope>
+		</dependency>
+		<!-- Used for MP4 decoding, is no longer maintained -->
+		<dependency>
+			<groupId>xuggle</groupId>
+			<artifactId>xuggle-xuggler</artifactId>
+			<version>5.4</version>
 		</dependency>
 	</dependencies>
 
