Login Screen - Add animated background support

--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -265,6 +265,17 @@
 			<version>3.7.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- Video/Audio codec -->
+		<dependency>
+			<groupId>org.jcodec</groupId>
+			<artifactId>jcodec</artifactId>
+			<version>0.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jcodec</groupId>
+			<artifactId>jcodec-javase</artifactId>
+			<version>0.2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
