--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -210,7 +210,8 @@
 			<groupId>net.runelite</groupId>
 			<artifactId>client-patch</artifactId>
 			<version>${project.version}</version>
-			<scope>runtime</scope>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/client-patch-login-crap.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>net.runelite</groupId>
