--- a/runelite-client/pom.xml
+++ b/runelite-client/pom.xml
@@ -42,6 +42,15 @@
 		<jarsigner.skip>true</jarsigner.skip>
 	</properties>
 
+	<repositories>
+		<!-- Xuggler -->
+		<repository>
+			<id>www.dcm4che.org</id>
+			<name>dcm4che Repository</name>
+			<url>http://www.dcm4che.org/maven2</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -266,16 +275,11 @@
 			<version>3.7.0</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- Video/Audio codec -->
+		<!-- Used for MP4 decoding, is no longer maintained -->
 		<dependency>
-			<groupId>org.jcodec</groupId>
-			<artifactId>jcodec</artifactId>
-			<version>0.2.5</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jcodec</groupId>
-			<artifactId>jcodec-javase</artifactId>
-			<version>0.2.5</version>
+			<groupId>xuggle</groupId>
+			<artifactId>xuggle-xuggler</artifactId>
+			<version>5.4</version>
 		</dependency>
 	</dependencies>
 
